[gd_scene load_steps=3 format=3 uid="uid://bbruyt65lcvvv"]

[ext_resource type="Script" path="res://dialog_scene/ReplicasBox.gd" id="1_ncb7m"]
[ext_resource type="AudioStream" uid="uid://ch2e61jxduv8k" path="res://dialog_scene/key_press.wav" id="2_76bru"]

[node name="ReplicasBox" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ncb7m")

[node name="TextRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.482353, 0.482353, 0.482353, 0.482353)

[node name="SpeakerNameRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -142.0
offset_right = -103.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.482353, 0.482353, 0.482353, 0.482353)

[node name="TextLabel" type="Label" parent="."]
layout_mode = 1
offset_left = -290.0
offset_top = -90.0
offset_right = 290.0
offset_bottom = -10.0
text = "Sample textSample textSample textSample textSample textSample textSample textSample textSample textSample textSample textSample textSample textSample textSample textSample textSample text"
autowrap_mode = 2

[node name="SpeakerNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -290.0
offset_top = -134.0
offset_right = 290.0
offset_bottom = -104.0
text = "Ryan Gosling"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_76bru")
